--- a/filtro.html
+++ b/filtro.html
@@ -10,15 +10,13 @@
 </head>
 
 <body>
-
   <div>
-      <input type="text" placeholder="Seleccioná un color o tipo">
-      <button>Filtrar</button>
-      <h1>Lista de productos </h1>
-      <div id="lista-de-productos">
-    </div>
+    <input id="filtro-input" type="text" placeholder="Seleccioná un color o tipo">
+    <button id="filtrar-boton">Filtrar</button>
+    <h1>Lista de productos</h1>
+    <div id="lista-de-productos"></div>
   </div>
-  <script src="../filtro.js"></script>
+  <script src="/filtro.js"></script> 
 </body>
 
 </html>
